{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 372,
  "lineage": "b870bd2d-6fbe-e024-57b6-c6dcf0b62b10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elastic_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:313330200302:instance/i-06464c19818666f89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06464c19818666f89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "elk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d5b4cd599482500",
            "private_dns": "ip-172-20-10-171.ec2.internal",
            "private_ip": "172.20.10.171",
            "public_ip": "3.87.108.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9c8123f087d9c1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fe4a5a67fecf831",
            "tags": {
              "Name": "elasticsearch_0"
            },
            "tags_all": {
              "Name": "elasticsearch_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-041d277660cfa0185"
            ]
          },
          "dependencies": [
            "aws_key_pair.elastic_ssh_key",
            "aws_security_group.elasticsearch_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:313330200302:instance/i-03441bf54734fc242",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03441bf54734fc242",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "elk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ea1da40f3757135",
            "private_dns": "ip-172-20-20-86.ec2.internal",
            "private_ip": "172.20.20.86",
            "public_ip": "3.88.55.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069557d0566098f13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08aba5f0b94558931",
            "tags": {
              "Name": "elasticsearch_1"
            },
            "tags_all": {
              "Name": "elasticsearch_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-041d277660cfa0185"
            ]
          },
          "dependencies": [
            "aws_key_pair.elastic_ssh_key",
            "aws_security_group.elasticsearch_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:313330200302:instance/i-0d428b7aeda56fc5e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d428b7aeda56fc5e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "elk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-094a177a381130423",
            "private_dns": "ip-172-20-30-46.ec2.internal",
            "private_ip": "172.20.30.46",
            "public_ip": "44.192.88.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01449f16502639f94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ac19919606b581b",
            "tags": {
              "Name": "elasticsearch_2"
            },
            "tags_all": {
              "Name": "elasticsearch_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-041d277660cfa0185"
            ]
          },
          "dependencies": [
            "aws_key_pair.elastic_ssh_key",
            "aws_security_group.elasticsearch_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "filebeat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:313330200302:instance/i-0f1aef1ddffe9e13a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1aef1ddffe9e13a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "elk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a327d03f24e8b430",
            "private_dns": "ip-172-20-10-177.ec2.internal",
            "private_ip": "172.20.10.177",
            "public_ip": "54.160.161.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3aedb16050cf4e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fe4a5a67fecf831",
            "tags": {
              "Name": "filebeat"
            },
            "tags_all": {
              "Name": "filebeat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b708d52448cef74e"
            ]
          },
          "dependencies": [
            "aws_instance.elastic_nodes",
            "aws_instance.kibana",
            "aws_instance.logstash",
            "aws_key_pair.elastic_ssh_key",
            "aws_security_group.elasticsearch_sg",
            "aws_security_group.filebeat_sg",
            "aws_security_group.kibana_sg",
            "aws_security_group.logstash_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc",
            "data.template_file.init_elasticsearch",
            "null_resource.install_kibana",
            "null_resource.install_logstash",
            "null_resource.move_elasticsearch_file",
            "null_resource.start_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:313330200302:instance/i-0f3defa5a2322169c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3defa5a2322169c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "elk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca67daf215b8312e",
            "private_dns": "ip-172-20-10-199.ec2.internal",
            "private_ip": "172.20.10.199",
            "public_ip": "54.227.99.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00007e59cd1160d45",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fe4a5a67fecf831",
            "tags": {
              "Name": "kibana"
            },
            "tags_all": {
              "Name": "kibana"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-094873d076e223a4a"
            ]
          },
          "dependencies": [
            "aws_instance.elastic_nodes",
            "aws_key_pair.elastic_ssh_key",
            "aws_security_group.elasticsearch_sg",
            "aws_security_group.kibana_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc",
            "data.template_file.init_elasticsearch",
            "null_resource.move_elasticsearch_file",
            "null_resource.start_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:313330200302:instance/i-0df163feb2d34af0f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df163feb2d34af0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "elk_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-015902b50cbfd18a8",
            "private_dns": "ip-172-20-10-193.ec2.internal",
            "private_ip": "172.20.10.193",
            "public_ip": "34.207.243.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09367dd9b557eba66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02fe4a5a67fecf831",
            "tags": {
              "Name": "logstash"
            },
            "tags_all": {
              "Name": "logstash"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d3693b4787ea995c"
            ]
          },
          "dependencies": [
            "aws_instance.elastic_nodes",
            "aws_instance.kibana",
            "aws_key_pair.elastic_ssh_key",
            "aws_security_group.elasticsearch_sg",
            "aws_security_group.kibana_sg",
            "aws_security_group.logstash_sg",
            "aws_subnet.elastic_subnet",
            "aws_vpc.elastic_vpc",
            "data.template_file.init_elasticsearch",
            "null_resource.install_kibana",
            "null_resource.move_elasticsearch_file",
            "null_resource.start_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "elastic_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:internet-gateway/igw-0096133119c27d701",
            "id": "igw-0096133119c27d701",
            "owner_id": "313330200302",
            "tags": {
              "Name": "elastic_igw"
            },
            "tags_all": {
              "Name": "elastic_igw"
            },
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "elastic_rt_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3009162b7675151",
            "original_route_table_id": "rtb-0b90b26c7de423672",
            "route_table_id": "rtb-03226809e6ed25ee2",
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "dependencies": [
            "aws_internet_gateway.elastic_internet_gateway",
            "aws_route_table.elastic_rt",
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elastic_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:route-table/rtb-03226809e6ed25ee2",
            "id": "rtb-03226809e6ed25ee2",
            "owner_id": "313330200302",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0096133119c27d701",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elastic_rt"
            },
            "tags_all": {
              "Name": "elastic_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.elastic_internet_gateway",
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticsearch_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:security-group/sg-041d277660cfa0185",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041d277660cfa0185",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "terraform-20211213135216393100000001",
            "name_prefix": "terraform-",
            "owner_id": "313330200302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elasticsearch_sg"
            },
            "tags_all": {
              "Name": "elasticsearch_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "filebeat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:security-group/sg-0b708d52448cef74e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b708d52448cef74e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211213135216459700000002",
            "name_prefix": "terraform-",
            "owner_id": "313330200302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "filebeat_sg"
            },
            "tags_all": {
              "Name": "filebeat_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kibana_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:security-group/sg-094873d076e223a4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094873d076e223a4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "terraform-20211213135216467200000003",
            "name_prefix": "terraform-",
            "owner_id": "313330200302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kibana_sg"
            },
            "tags_all": {
              "Name": "kibana_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "logstash_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:security-group/sg-0d3693b4787ea995c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3693b4787ea995c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress rules",
                "from_port": 5042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5042
              }
            ],
            "name": "terraform-20211213135216506100000004",
            "name_prefix": "terraform-",
            "owner_id": "313330200302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "logstash_sg"
            },
            "tags_all": {
              "Name": "logstash_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elastic_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:subnet/subnet-02fe4a5a67fecf831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-02fe4a5a67fecf831",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313330200302",
            "tags": {
              "Name": "elastic_subnet_us-east-1a"
            },
            "tags_all": {
              "Name": "elastic_subnet_us-east-1a"
            },
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:subnet/subnet-08aba5f0b94558931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.20.0/24",
            "id": "subnet-08aba5f0b94558931",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313330200302",
            "tags": {
              "Name": "elastic_subnet_us-east-1b"
            },
            "tags_all": {
              "Name": "elastic_subnet_us-east-1b"
            },
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:subnet/subnet-01ac19919606b581b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.30.0/24",
            "id": "subnet-01ac19919606b581b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313330200302",
            "tags": {
              "Name": "elastic_subnet_us-east-1c"
            },
            "tags_all": {
              "Name": "elastic_subnet_us-east-1c"
            },
            "vpc_id": "vpc-02ec22c5b3a811c9c"
          },
          "dependencies": [
            "aws_vpc.elastic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elastic_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313330200302:vpc/vpc-02ec22c5b3a811c9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-09998642dd499800b",
            "default_route_table_id": "rtb-0b90b26c7de423672",
            "default_security_group_id": "sg-07f5be4eeef5ce4c3",
            "dhcp_options_id": "dopt-b95cf0c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02ec22c5b3a811c9c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b90b26c7de423672",
            "owner_id": "313330200302",
            "tags": {
              "Name": "elastic_vpc"
            },
            "tags_all": {
              "Name": "elastic_vpc"
            }
          }
        }
      ]
    }
  ]
}